# digit-recognizer

./: .gitignore  README.md  app.py  index.html  model.pickle  package-lock.json  package.json  pyproject.toml  requirements.txt  train_model.py  tsconfig.tsbuildinfo  vite.config.ts
api/: config.py  resources.py  train_model.py
public/: image_model.keras
src/: app.tsx  globals.css  main.tsx
src/components/: cell.tsx  predicted.tsx  prediction.tsx  theme-provider.tsx
src/layouts/: root-layout.tsx
src/lib/: controllers.ts
static/: sketch.js  styles.css
templates/: index.html
