[project]
name = "digit-recognizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-restful>=0.3.10",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "tensorflow>=2.19.0",
    "uvicorn>=0.34.3",
]
